--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "tailwindcss-animate": "^1.0.7",
     "cheerio": "^1.0.0-rc.12",
     "zod": "^3.23.8",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/node": "^20",
