--- a/src/config/app.json
+++ b/src/config/app.json
@@ -1,4 +1,5 @@
 {
   "rcrConsentFormsUrl": "https://www.rcr.ac.uk/our-services/management-service-delivery/national-radiotherapy-consent-forms/",
-  "rcrBaseUrl": "https://www.rcr.ac.uk"
+  "rcrBaseUrl": "https://www.rcr.ac.uk",
+  "validateRNumber": true
 }
