--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "pretest": "tsc -p tsconfig.test.json",
+    "test": "NODE_PATH=test-dist node --test",
+    "posttest": "rm -rf test-dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
