--- a/src/config/app.json
+++ b/src/config/app.json
@@ -1,5 +1,6 @@
 {
   "rcrConsentFormsUrl": "https://www.rcr.ac.uk/our-services/management-service-delivery/national-radiotherapy-consent-forms/",
   "rcrBaseUrl": "https://www.rcr.ac.uk",
-  "validateRNumber": false
+  "validateRNumber": false,
+  "previewPdfFields": false
 }
