--- a/src/config/app.json
+++ b/src/config/app.json
@@ -2,5 +2,5 @@
   "rcrConsentFormsUrl": "https://www.rcr.ac.uk/our-services/management-service-delivery/national-radiotherapy-consent-forms/",
   "rcrBaseUrl": "https://www.rcr.ac.uk",
   "validateRNumber": false,
-  "previewPdfFields": true
+  "previewPdfFields": false
 }
