Add a config option to open the PDF in Acrobat reader  if it is present,

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -2,5 +2,6 @@
   "rcrConsentFormsUrl": "https://www.rcr.ac.uk/our-services/management-service-delivery/national-radiotherapy-consent-forms/",
   "rcrBaseUrl": "https://www.rcr.ac.uk",
   "validateRNumber": false,
-  "previewPdfFields": false
+  "previewPdfFields": false,
+  "pdfOpenMethod": "browser"
 }
