--- a/src/config/app.json
+++ b/src/config/app.json
@@ -3,5 +3,5 @@
   "rcrBaseUrl": "https://www.rcr.ac.uk",
   "validateRNumber": false,
   "previewPdfFields": false,
-  "pdfOpenMethod": "browser"
+  "pdfOpenMethod": "acrobat"
 }
