In the /config page, in the same manner as the other options, add a new

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -3,5 +3,6 @@
   "rcrBaseUrl": "https://www.rcr.ac.uk",
   "validateRNumber": false,
   "previewPdfFields": false,
-  "pdfOpenMethod": "acrobat"
+  "pdfOpenMethod": "acrobat",
+  "rtConsentFolder": ""
 }
