When the SUBMIT button is clicked and the user successfully uploads a PD

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -4,5 +4,5 @@
   "validateRNumber": false,
   "previewPdfFields": false,
   "pdfOpenMethod": "acrobat",
-  "rtConsentFolder": ""
+  "rtConsentFolder": "c:\\VC01\\RT_Consent"
 }
