--- a/src/config/app.json
+++ b/src/config/app.json
@@ -4,5 +4,6 @@
   "validateRNumber": false,
   "previewPdfFields": false,
   "pdfOpenMethod": "acrobat",
-  "rtConsentFolder": "c:\\VC01\\RT_Consent"
+  "rtConsentFolder": "c:\\VC01\\RT_Consent",
+  "prepopulateWithFakeData": true
 }
