When dummy data is not being used, start with all the fields red like th

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -5,5 +5,5 @@
   "previewPdfFields": false,
   "pdfOpenMethod": "acrobat",
   "rtConsentFolder": "c:\\VC01\\RT_Consent",
-  "prepopulateWithFakeData": true
+  "prepopulateWithFakeData": false
 }
