--- a/src/config/app.json
+++ b/src/config/app.json
@@ -5,5 +5,6 @@
   "previewPdfFields": false,
   "pdfOpenMethod": "acrobat",
   "rtConsentFolder": "c:\\VC01\\RT_Consent",
-  "prepopulateWithFakeData": false
+  "prepopulateWithFakeData": false,
+  "showWelshForms": false
 }
