Amend the staff list JSON file where a staff member is a Consultant or a

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -5,6 +5,6 @@
   "previewPdfFields": false,
   "pdfOpenMethod": "browser",
   "rtConsentFolder": "c:\\VC01\\RT_Consent",
-  "prepopulateWithFakeData": false,
+  "prepopulateWithFakeData": true,
   "showWelshForms": false
 }
