When a pre-populated PDF download is requested instead of offering the d

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -5,6 +5,7 @@
   "previewPdfFields": false,
   "pdfOpenMethod": "acrobat",
   "rtConsentFolder": "c:\\VC01\\RT_Consent",
+  "tempPdfPath": "C:\\TEMP",
   "prepopulateWithFakeData": true,
   "showWelshForms": false
 }
