I see this error with the app, reported by NextJS, please fix it. The er

--- a/src/config/app.json
+++ b/src/config/app.json
@@ -7,5 +7,6 @@
   "pdfOpenMethod": "acrobat",
   "rtConsentFolder": "c:\\VC01\\RT_Consent",
   "prepopulateWithFakeData": true,
-  "showWelshForms": false
+  "showWelshForms": false,
+  "komsApiDebugMode": false
 }
