--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "activedirectory2": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -53,7 +52,8 @@
     "cheerio": "^1.0.0-rc.12",
     "zod": "^3.23.8",
     "node-cache": "^5.1.2",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "ldapts": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
