--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "zod": "^3.23.8",
     "node-cache": "^5.1.2",
     "pdf-lib": "^1.17.1",
-    "ldapts": "^5.0.0"
+    "ldapts": "^5.0.0",
+    "iron-session": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
